Finished chat and line

--- a/package.json
+++ b/package.json
@@ -1,44 +1,47 @@
 {
-  "name": "text-completion-api",
-  "description": "A Text Completion API that predicts the next word in a given text.",
-  "version": "0.0.1",
-  "packageManager": "yarn@3.2.4",
-  "scripts": {
-    "dev": "tsoa spec-and-routes",
-    "tsoa:gen": "tsoa routes && tsoa swagger",
-    "build": "tsoa spec-and-routes && tsc",
-    "start": "node build/src/server.js",
-    "test": "node build/src/tests/index.js"
-  },
-  "repository": "https://github.com/chrisyao4700/text-completion-api.git",
-  "author": "chrisyao4700 <chrisyao900908@gmail.com>",
-  "license": "MIT",
-  "devDependencies": {
-    "@types/cls-hooked": "^4.3.3",
-    "@types/cors": "^2.8.12",
-    "@types/morgan": "^1.9.3",
-    "@types/node": "^18.8.5",
-    "@types/swagger-ui-express": "^4.1.3",
-    "concurrently": "^7.4.0",
-    "nodemon": "^2.0.20",
-    "prettier": "2.8.3",
-    "ts-node": "^10.9.1",
-    "typescript": "^4.8.4"
-  },
-  "dependencies": {
-    "cls-hooked": "^4.2.2",
-    "cors": "^2.8.5",
-    "dotenv": "^16.0.3",
-    "express": "^4.18.2",
-    "express-status-monitor": "^1.3.4",
-    "http-auth": "^4.2.0",
-    "jsonwebtoken": "^9.0.0",
-    "morgan": "^1.10.0",
-    "sequelize": "^6.28.0",
-    "sqlite3": "^5.1.4",
-    "swagger-ui-express": "^4.5.0",
-    "tsoa": "^4.1.3",
-    "uuid": "^9.0.0",
-    "winston": "^3.8.2"
+    "name": "text-completion-api",
+    "description": "A Text Completion API that predicts the next word in a given text.",
+    "version": "0.0.1",
+    "packageManager": "yarn@3.2.4",
+    "scripts": {
+      "dev": "nodemon",
+      "tsoa:gen": "tsoa routes && tsoa swagger",
+      "build": "tsoa spec-and-routes && tsc",
+      "init-db": "tsc &&  node build/src/perform/initDatabase.perf.js",
+      "start": "node build/src/server.js",
+      "test": "node build/src/tests/index.js"
+    },
+    "repository": "https://github.com/chrisyao4700/text-completion-api.git",
+    "author": "chrisyao4700 <chrisyao900908@gmail.com>",
+    "license": "MIT",
+    "devDependencies": {
+      "@types/cls-hooked": "^4.3.3",
+      "@types/cors": "^2.8.12",
+      "@types/morgan": "^1.9.3",
+      "@types/node": "^18.8.5",
+      "@types/swagger-ui-express": "^4.1.3",
+      "concurrently": "^7.4.0",
+      "nodemon": "^2.0.20",
+      "prettier": "2.8.3",
+      "ts-node": "^10.9.1",
+      "typescript": "^4.8.4"
+    },
+    "dependencies": {
+      "cls-hooked": "^4.2.2",
+      "cors": "^2.8.5",
+      "dotenv": "^16.0.3",
+      "express": "^4.18.2",
+      "express-status-monitor": "^1.3.4",
+      "http-auth": "^4.2.0",
+      "jsonwebtoken": "^9.0.0",
+      "morgan": "^1.10.0",
+      "openai": "^3.1.0",
+      "rhea": "^3.0.2",
+      "sequelize": "^6.28.0",
+      "sqlite3": "^5.1.4",
+      "swagger-ui-express": "^4.5.0",
+      "tsoa": "^4.1.3",
+      "uuid": "^9.0.0",
+      "winston": "^3.8.2"
+    }
   }
-}
