--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
         "swagger-ui-express": "^4.5.0",
         "tsoa": "^4.1.3",
         "uuid": "^9.0.0",
-        "winston": "^3.8.2"
+        "winston": "^3.8.2",
+        "xml2js": "^0.4.23"
     }
 }
