Save for notification

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "dependencies": {
         "@animal-high-tech/animal-service-auth": "^1.2.8",
         "@types/xml2js": "^0.4.11",
+        "axios": "^1.3.2",
         "cls-hooked": "^4.2.2",
         "cors": "^2.8.5",
         "dotenv": "^16.0.3",
