--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     },
     "dependencies": {
         "@animal-high-tech/animal-service-auth": "^1.2.8",
+        "@google-cloud/speech": "^5.3.0",
         "@types/xml2js": "^0.4.11",
         "axios": "^1.3.2",
         "cls-hooked": "^4.2.2",
