--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
         "jsonwebtoken": "^9.0.0",
         "morgan": "^1.10.0",
         "openai": "^3.1.0",
+        "path": "^0.12.7",
         "rhea": "^3.0.2",
         "sequelize": "^6.28.0",
         "sha1": "^1.1.1",
