--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "@animal-high-tech/animal-service-auth": "^1.2.8",
         "@google-cloud/speech": "^5.3.0",
         "@types/xml2js": "^0.4.11",
+        "aws-sdk": "^2.1313.0",
         "axios": "^1.3.2",
         "cls-hooked": "^4.2.2",
         "cors": "^2.8.5",
