--- a/package.json
+++ b/package.json
@@ -32,14 +32,17 @@
         "@types/xml2js": "^0.4.11",
         "aws-sdk": "^2.1313.0",
         "axios": "^1.3.2",
+        "blob": "^0.1.0",
         "cls-hooked": "^4.2.2",
         "cors": "^2.8.5",
         "dotenv": "^16.0.3",
         "express": "^4.18.2",
         "express-status-monitor": "^1.3.4",
+        "form-data": "^4.0.0",
         "http-auth": "^4.2.0",
         "jsonwebtoken": "^9.0.0",
         "morgan": "^1.10.0",
+        "node-fetch": "^3.3.0",
         "openai": "^3.1.0",
         "path": "^0.12.7",
         "rhea": "^3.0.2",
