--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "dependencies": {
         "@animal-high-tech/animal-service-auth": "^1.2.8",
         "@google-cloud/speech": "^5.3.0",
+        "@types/node-fetch": "^2.6.2",
         "@types/xml2js": "^0.4.11",
         "aws-sdk": "^2.1313.0",
         "axios": "^1.3.2",
