--- a/package.json
+++ b/package.json
@@ -29,7 +29,6 @@
     "dependencies": {
         "@animal-high-tech/animal-service-auth": "^1.2.8",
         "@google-cloud/speech": "^5.3.0",
-        "@types/node-fetch": "^2.6.2",
         "@types/xml2js": "^0.4.11",
         "aws-sdk": "^2.1313.0",
         "axios": "^1.3.2",
@@ -40,6 +39,7 @@
         "express": "^4.18.2",
         "express-status-monitor": "^1.3.4",
         "form-data": "^4.0.0",
+        "formdata-node": "^5.0.0",
         "http-auth": "^4.2.0",
         "jsonwebtoken": "^9.0.0",
         "morgan": "^1.10.0",
