--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "dependencies": {
         "@animal-high-tech/animal-service-auth": "^1.2.8",
         "@google-cloud/speech": "^5.3.0",
+        "@google-cloud/translate": "^7.1.0",
         "@types/node": "^18.8.5",
         "@types/xml2js": "^0.4.11",
         "aws-sdk": "^2.1313.0",
