--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
         "express-status-monitor": "^1.3.4",
         "form-data": "^4.0.0",
         "formdata-node": "^5.0.0",
+        "grammarify": "^2.1.0",
         "http-auth": "^4.2.0",
         "jsonwebtoken": "^9.0.0",
         "morgan": "^1.10.0",
